# SetParser

./: README.md
parser/: Cargo.toml  Makefile
parser/src/: ast.rs  eval.rs  grammar.pest  lib.rs  main.rs  parse.rs
parser/test_data/: example1.set
parser/tests/: decl_tests.rs  grammar_rules_tests.rs
