[package]
name = "set_parser"
version = "0.1.0"
edition = "2024"
description = "A tiny DSL and parser for set algebra (∪, ∩, \\, △, '), built with pest. Parses programs with `let` and `print`, builds an AST-ready parse tree for evaluation/printing."
readme = "README.md"
license = "MIT"
repository = "https://github.com/katerynabratiuk/SetParser"
homepage = "https://github.com/katerynabratiuk/SetParser"
documentation = "https://docs.rs/set_parser"
keywords = ["set","parser","dsl"]
categories = ["parsing"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
figlet-rs = "0.1.5"
pest = "2.8.3"
pest_derive = "2.8.3"
thiserror = "2.0.17"
